force-app/main/default/staticresources/python/Disappear/src/objects/PubRelated__c.object
<CustomObject>
    <fields>
        <fullName>Publication__c</fullName>
        <deleteConstraint>Restrict</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipName>PubRelated</relationshipName>
        <required>true</required>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>RelatedPub__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Publication</label>
        <referenceTo>Publication__c</referenceTo>
        <relationshipName>RelatedPub</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>SiebelRowId__c</fullName>
        <externalId>true</externalId>
        <label>SiebelRowId</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ToDelete__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Temp field for UI.
User can click on ToDelete Checkbox and backend will physically delete the record.</description>
        <label>ToDelete</label>
        <type>Checkbox</type>
    </fields>
    <label>Publication Related</label>
    <nameField>
        <displayFormat>pr-{0000000}</displayFormat>
        <label>PubRelated Name</label>
        <type>AutoNumber</type>
    </nameField>
    <pluralLabel>Publications Related</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>